src/objects/Workout_Record__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date created // hide from layout</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workout_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workout</label>
        <referenceTo>Workout__c</referenceTo>
        <relationshipLabel>Workout Records</relationshipLabel>
        <relationshipName>Workout_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workout Record</label>
    <nameField>
        <label>Workout Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workout Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>